integrate mlib (#1091)
* integrate mlib

* fix deprecation

* remove deprecated use of new URL

* fix oboslete funk crawler api param

* remove deprecated function

* fix java doc

* fix sonar

* fix sonar

* refactor mlib-messages

* cleanup

* remove mlib in docs