@@ -5,15 +5,15 @@ import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonDeserializer;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import de.mediathekview.mlib.daten.Film;
-import de.mediathekview.mlib.daten.GeoLocations;
-import de.mediathekview.mlib.daten.Sender;
+import de.mediathekview.mserver.daten.Film;
+import de.mediathekview.mserver.daten.GeoLocations;
+import de.mediathekview.mserver.daten.Sender;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.lang.reflect.Type;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
@@ -92,7 +92,7 @@ public class ArteFilmDeserializer implements JsonDeserializer<Optional<Film>> {
       film.setBeschreibung(beschreibung);
 
       try {
-        film.setWebsite(new URL(urlWeb));
+        film.setWebsite(URI.create(urlWeb).toURL());
       } catch (MalformedURLException e) {
         LOG.error("Invalid url: {}", urlWeb);
       }
